@@ -1,6 +1,5 @@
 package com.zetcode;
 
-import java.util.Arrays;
 import java.util.List;
 
 // Java 8 introduced the forEach() method
@@ -9,8 +8,8 @@ public class JavaForEachEx {
 
     public static void main(String[] args) {
 
-        List<String> items = Arrays.asList("coin", "ball", "lamp", "spoon");
-        
+        var items = List.of("coin", "ball", "lamp", "spoon");
+
         items.stream().forEach(System.out::println);
     }
 }
